<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_MKS_275" Id="{7f664acb-27b6-40f8-83da-74e352757f93}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MKS_275
VAR_INPUT
	stVolume : ST_Volume;
END_VAR
VAR_OUTPUT
END_VAR
VAR_IN_OUT
	stGauge	:	ST_MKS_275;
END_VAR
VAR
	rVoltage	:	REAL;
END_VAR
VAR CONSTANT
	caPvsV	:	ARRAY[1..31,1..2] OF LREAL := [
		0,0.375,
		1.00E-04,0.376,
		2.00E-04,0.377,
		5.00E-04,0.379,
		1.00E-03,0.384,
		2.00E-03,0.392,
		5.00E-03,0.417,
		1.00E-02,0.455,
		2.00E-02,0.523,
		5.00E-02,0.682,
		1.00E-01,0.876,
		2.00E-01,1.155,
		5.00E-01,1.683,
		1.00E+00,2.217,
		2.00E+00,2.842,
		5.00E+00,3.675,
		1.00E+01,4.206,
		2.00E+01,4.577,
		5.00E+01,4.846,
		1.00E+02,4.945,
		2.00E+02,5.019,
		3.00E+02,5.111,
		4.00E+02,5.224,
		5.00E+02,5.329,
		6.00E+02,5.419,
		7.00E+02,5.495,
		7.60E+02,5.534,
		8.00E+02,5.558,
		9.00E+02,5.614,
		1.00E+03,5.659,
		1.01E+03,5.66
	]; //the conversion table for pressure to analog (super) non-linear voltage
	caPvsVRows	:	UINT	:= 31;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* 
MKS 275 Vacuum gauge

A vacuum gauge takes as input, the pressure of the volume it is attached to,
and produces on its analog output, a corresponding voltage.

A.Pai
3/29/2017
*)

(*
MKS 275 voltage calculation 

Does the inverse of the FB 275 from the vacuum library.
Converts real pressure into MKS 275 signal based on interpolation.
//not working right now
A. Pai, 2017-1-13
*)


IF stGauge.q_xGaugeConnected THEN//If gauge is connected

	(*set gauge real pressure based on chamber real pressure*)
	stGauge.rPress := stVolume.rPressure;
	(* Run the interpolator to get a new value for the analog voltage *)
	stGauge.stIntrpParams.tCtrlCycleTime := T#10MS;
	stGauge.stIntrpParams.tTaskCycleTime := T#10MS;
	stGauge.stIntrpParams.pDataTable_ADR	:=	ADR(caPvsV); //we point each time this block gets called to avoid online changes shifting memory around and potentially screwing up this pointer.
	stGauge.stIntrpParams.nDataTable_SIZEOF	:=	SIZEOF(caPvsV);
	stGauge.stIntrpParams.nDataTable_NumberOfRows := caPvsVRows;	
	
	stGauge.fbInterpolator.fIn	:=	REAL_TO_LREAL(stGauge.rPress);
	stGauge.fbInterpolator.eMode := eCTRL_MODE_ACTIVE; //active

	stGauge.fbInterpolator(stParams := stGauge.stIntrpParams, fOut => rVoltage);
	(*set gauge raw pressure based on transformation of real pressure*)
	stGauge.q_iRawPress := LREAL_TO_INT( rVoltage * 32767/10 );// gauge on

ELSE//gauge gets disconnected

	stGauge.rPress := 0;
	stGauge.q_iRawPress := 0; // gauge not on ??

END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_MKS_275">
      <LineId Id="15" Count="4" />
      <LineId Id="53" Count="0" />
      <LineId Id="20" Count="2" />
      <LineId Id="99" Count="0" />
      <LineId Id="101" Count="7" />
      <LineId Id="100" Count="0" />
      <LineId Id="28" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="49" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="128" Count="10" />
      <LineId Id="35" Count="0" />
      <LineId Id="29" Count="1" />
      <LineId Id="50" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="51" Count="0" />
      <LineId Id="31" Count="1" />
      <LineId Id="52" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>